branches/libbulletc/src/btRigidBody_wrap.h


	EXPORT btRigidBody* btRigidBody_upcast(btCollisionObject* colObj);

	EXPORT void btRigidBody_updateDeactivation(btRigidBody* obj, btScalar timeStep);

	EXPORT void btRigidBody_updateInertiaTensor(btRigidBody* obj);

	EXPORT bool btRigidBody_wantsSleeping(btRigidBody* obj);